Added instagram feed component

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,10 @@
     transform: rotate(360deg);
   }
 }
+
+#instafeed {
+  height: auto;
+  width: 30%;
+  text-align: center;
+  border: 3px solid green;
+}
