--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,12 @@ h3 {
   display: inline-block;
   padding: 10px;
 }
+
+.headerImg {
+  background: url("assets/barn.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 400px;
+  background-position: center;
+  overflow:hidden;
+}
