--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,19 @@
   pointer-events: none;
 }
 
-.App-header {
+.header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: relative;
+  display: inline-block;
+  
+}
+
+.wrapper {
+  margin: 0 2%;
+  position: relative;
+  top: 250px;
 }
 
 .App-link {
