Add profile photo, minor styling

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,12 @@
 .InstaCarousel {
   width: 80%;
 }
+
+.title {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.about {
+  text-align: center;
+}
