--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,17 @@
 .about {
   margin-left: 10%;
   margin-right: 10%;
-  text-align: center;
+  text-align: left;
+}
+
+.title {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.profile-picture {
+  margin-left: 10%;
+  margin-right: 10%;
+  width: 30%;
+  float: right;
 }
