--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -48,8 +48,11 @@ a.dropdown-toggle.nav-link {
 }
 
 .footer {
+  margin-top: 20px;
   position: fixed;
-  bottom: 5px;
-  text-align: center;
+  bottom: 0px;
+  text-align: right;
   width: 100%;
+  padding-bottom: 5px;
+  padding-right: 5px;
 }
